[gd_scene load_steps=2 format=2]

[ext_resource path="res://Source/Scripts/Interface/LevelSelectMenu.gd" type="Script" id=1]

[node name="LevelSelectMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 640.0
margin_bottom = 16.0
size_flags_vertical = 1
text = "SELECT LEVEL"
align = 1
valign = 1

[node name="LevelGrid" type="GridContainer" parent="VBoxContainer"]
margin_top = 20.0
margin_right = 640.0
margin_bottom = 340.0
size_flags_horizontal = 5
size_flags_vertical = 7
columns = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="Button" parent="VBoxContainer"]
margin_top = 344.0
margin_right = 640.0
margin_bottom = 360.0
text = "Return"
[connection signal="pressed" from="VBoxContainer/BackButton" to="." method="_on_BackButton_pressed"]
